--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "display_name": "ST-AutoQuote",
+    "display_name": "AutoQuote",
     "loading_order": 9,
     "requires": [],
     "optional": [],
