--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "optional": [],
     "js": "index.js",
     "css": "style.css",
-    "author": "Rai",
+    "author": "RaiSicario",
     "version": "1.0.0",
-    "homePage": ""
+    "homePage": "https://github.com/raisicario/AutoQuote/"
 }
